Update jQuery to v2.1.0pre since it's awesome. Instead of using an internal padding value set a thick border. Switch from .attr to .prop. Using $(document.body) event handler where able. Stopped using "px" strings for pixel values since their not needed. Instead of the #folder_list and #advanced hidden by default in CSS, hide them afterward.

--- a/css/newtab.css
+++ b/css/newtab.css
@@ -15,11 +15,11 @@ body {
 
 .entry {
 	float: left;
-	padding: 7px;
+	border: 7px solid transparent;
 }
 
 .entry:hover {
-	background: rgba(53, 191, 256, 0.5);
+	border: 7px solid rgba(53, 191, 256, 0.5);
 	border-radius: 10px;
 }
 
@@ -132,7 +132,6 @@ td {
 }
 
 #folder_list {
-	display: none;
 	margin: 20px auto 10px auto;
 	min-width: 20em;
 	max-width: 30%;
