--- a/css/options.css
+++ b/css/options.css
@@ -21,7 +21,6 @@ h1 {
 }
 
 #advanced {
-	display: none;
 	margin-top: 3.5em;
 }
 
